[project]
name = "cron_parser"
version = "0.1.0"
description = "A simple cron expression parser CLI application"
authors = [
    {name = "Pavel Kim", email = "pavel.kim93@gmail.com"},
]
dependencies = [
    "pytest>=8.2.0",
    "typer>=0.12.3",
    "ruff>=0.4.3",
    "pyright>=1.1.361",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
cron-parser = { call = "cron_parser.cli:app"}
unit-test = "pytest"
lint = "ruff"

[tool.pdm]
distribution = true

[project.scripts]
cron-parser = "cron_parser.cli:app"